[package]
name = "chat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

